daytrader-webapp/daytrader-web/env/external/kubernetes/conf/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: daytrader-web
  name: daytrader-web
  namespace: default
spec:
  progressDeadlineSeconds: 2147483647
  replicas: 1
  revisionHistoryLimit: 2147483647
  selector:
    matchLabels:
      app: daytrader-web
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: daytrader-web
    spec:
      containers:
      - env:
        - name: ACCOUNTS_SERVICE_ROUTE
          value: http://daytrader-accounts
        - name: GATEWAY_SERVICE_ROUTE
          value: http://daytrader-gateway
        - name: PORTFOLIOS_SERVICE_ROUTE
          value: http://daytrader-portfolios
        - name: QUOTES_SERVICE_ROUTE
          value: http://daytrader-quotes
        - name: GET_HOSTS_FROM
          value: dns
        image: krishnam007/daytrader-web:4.0.18
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 4
          httpGet:
            path: /health
            port: 5443
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 10
        name: daytrader-web
        ports:
        - containerPort: 5443
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 5443
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 10
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
