daytrader-webapp/daytrader-web/env/external/kubernetes/conf/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: daytrader-web
  name: daytrader-web
  namespace: default
spec:
 ports:
 - port: 443
   protocol: TCP
   targetPort: 5443
 externalIPs:
   - 192.168.205.10



  selector:
    app: daytrader-web
  sessionAffinity: None
  type: ClusterIP
